# kodkod

./: .gitignore  Cargo.toml  README.md
kodkod/: Cargo.toml  LICENSE
kodkod-core/: Cargo.toml
kodkod-core/src/: agent.rs  conversation.rs  lib.rs  message.rs  provider.rs  tests.rs  tool.rs  turns.rs
kodkod-core/src/agent/: control.rs
kodkod-core/src/retry/: policy.rs  provider.rs
kodkod-core/src/tool/: executor.rs  result.rs
kodkod-openai/: Cargo.toml
kodkod-openai/src/: api.rs  completion.rs  convert.rs  error.rs  lib.rs  provider.rs
kodkod/src/: lib.rs  tests.rs  tool.rs
kodkod/src/openai/: completion.rs  convert.rs  error.rs  mod.rs  model.rs  provider.rs
lynx-agent-retry/: Cargo.toml  README.md
lynx-agent-retry/src/: lib.rs  provider.rs  provider_error.rs  retryable.rs
src/: agent.rs  conversation.rs  lib.rs  message.rs  provider.rs  tests.rs  tests_image_rt.rs  tool.rs  turns.rs
src/agent/: control.rs  error.rs  event.rs
src/provider/: error.rs  openai_compatible.rs  retry.rs  retryable.rs
src/retry/: mod.rs  provider.rs  provider_error.rs
src/tool/: call.rs  error.rs  executor.rs  result.rs  spec.rs
