[package]
name = "lynx-agent"
version = "0.1.0"
edition = "2024"
description = "A small provider-agnostic agent loop with tool calling support."
license = "MIT"
readme = "README.md"
repository = "https://github.com/WilmerFHandler/lynx-agent"
keywords = ["agent", "llm", "tools"]
categories = ["asynchronous"]
exclude = [".raven/"]

[dependencies]
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1"
default-features = false
features = ["time"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }