[package]
name = "kodkod-openai"
version = "0.1.0"
edition = "2024"
description = "OpenAI-compatible provider for kodkod."
license = "MIT"
readme = "README.md"
repository = "https://github.com/WilmerFHandler/kodkod"
keywords = ["agent", "llm", "openai"]
categories = ["asynchronous"]

[dependencies]
kodkod = { path = "../kodkod", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros"]

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }