[package]
name = "kodkod-openai"
version = "0.1.0"
edition = "2024"
description = "OpenAI-compatible provider for kodkod."
license = "MIT"
readme = "README.md"
repository = "https://github.com/WilmerFHandler/kodkod"
keywords = ["agent", "llm", "openai"]
categories = ["asynchronous"]

[dependencies]
kodkod = { path = "../kodkod", version = "0.1.0", features = ["openai"] }