[package]
name = "kodkod"
version = "0.1.0"
edition = "2024"
description = "A small provider-agnostic agent loop with tool calling support."
license = "MIT"
readme = "../kodkod-core/README.md"
repository = "https://github.com/WilmerFHandler/kodkod"
keywords = ["agent", "llm", "tools"]
categories = ["asynchronous"]

[features]
default = []
openai = ["dep:kodkod-openai"]

[dependencies]
kodkod-core = { path = "../kodkod-core", version = "0.1.0" }
kodkod-openai = { path = "../kodkod-openai", optional = true, version = "0.1.0" }