[package]
name = "lynx-agent-retry"
version = "0.1.0"
edition = "2024"
description = "Retry middleware for lynx-agent providers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/WilmerFHandler/lynx-agent"
keywords = ["agent", "llm", "retry"]
categories = ["asynchronous"]

[dependencies]
lynx-agent = { path = ".." }

[dependencies.tokio]
version = "1"
default-features = false
features = ["time"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }